# xMem

./: .dockerignore  .env.docker.example  .env.example  .eslintignore  .gitignore  Dockerfile  Makefile  README.md  architecture.xml  bulk_vectors.json  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  insert_50_vectors.sh  jest.config.js  middleware.ts  next-auth.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postman.json  schema.json  sonar-project.properties  tailwind.config.js  tsconfig.json  types.d.ts  xmem-cursor-rules.mdc
.cursor/config/: keybindings.json  settings.json
.cursor/rules/: xmem-rules.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
.vercel/: project.json
agent/: behaviour.md  instructions.md  schema.json
app/: Context.tsx  NextAuthProvider.tsx  globals.css  layout.tsx  page.tsx
app/[category]/: page.tsx
app/api/: progress.ts  progress.tsx  set-goal.tsx  track-progress.tsx  user.ts
app/api-page/: page.tsx
app/constants/: index.ts
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  data.py
backend/app/core/: config.py
backend/app/db/: base.py  chroma_client.py  session.py
backend/app/models/: user.py
backend/app/services/: chat_service.py
backend/migrations/: env.py
backend/migrations/versions/: 608a7f1d23d2_create_users_table.py
components/: CreateMemory.tsx  Footer.tsx  MobileNav.tsx  Navbar.tsx  SideNav.tsx  Skills.tsx  UserContext.tsx
docs/: architecture.md  architecture.puml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postman.json
k8s/: dashboard-deployment.yaml  ml-service-deployment.yaml  postgres-deployment.yaml
lib/: auth.ts
mcp_server/: README.md  auth.py  config.py  main.py  requirements.txt
ml_service/: Dockerfile  main.py  pyproject.toml  requirements.txt  schemas.py
ml_service/services/: agent.py  sentiment.py  tagging.py  topics.py
prisma/: prisma.ts  schema.prisma  seed.ts
scripts/: bulk_upsert_qdrant_pinecone.ts  create-adr-on-deploy.ts  dev.sh  e2e-test.sh  generate-architecture-puml.ts  generate_roche_points.py  reindex_qdrant.ts  sync-version.ts
src/: version.ts
(+370 files in other folders)
