[project]
name = "ml-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Otavio Serra",email = "olserra@gmail.com"}
]
# readme = "README.md"
package-mode = false
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "bertopic (>=0.16.0,<0.17.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "llama-cpp-python (>=0.2.72,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
