[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = [
    "Otavio Serra <olserra@gmail.com>"
]
# readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
keybert = ">=0.9.0,<0.10.0"
pydantic = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
